--- a/css/oes.css
+++ b/css/oes.css
@@ -7,6 +7,11 @@
 
 @media only screen and (max-width: 740px) 
 {
+    .mdl-cls
+    {
+        width: 400px;
+        height: 330px;
+    }
     .card-btn
     {
         margin-top: -36px;
